# fa2

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: check.rs  init.rs  mod.rs  new.rs  report.rs  serve.rs  show.rs
src/temp/: box.R  clean.R  report.qmd
