[package]
name = "fa2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
clap = { version = "4.5.45", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "signal"] }
toml = "0.9.5"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
